changelog and z-index fix

--- a/theme/themes/pastanaga/extras/blocks.less
+++ b/theme/themes/pastanaga/extras/blocks.less
@@ -71,7 +71,6 @@
 
 .ui.drag.block.video,
 .ui.drag.block.image {
-  z-index: 2;
   // This fixes the floating images in Volto Editor! Muahahaha
   display: block;
   // This fixes two left floated items in a row
